Close combined prompt 02 binding parity gaps